[CLIENT] Fix spacing for deadline grid elements

--- a/client/src/components/templates/content_objects/Deadline.css
+++ b/client/src/components/templates/content_objects/Deadline.css
@@ -4,6 +4,7 @@
 .deadline-container {
     position: relative;
 
+    margin: 1rem;
     padding: 1rem;
     min-width: 15rem;
 }
@@ -11,6 +12,7 @@
 .deadline-content-container {
   display: grid;
   grid-template-columns: 1fr 1.5fr;
+  column-gap: 1rem;
 }
 
 .deadline-content-container-no-date {
